<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_food"
            android:name="@string/menu_home" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_menu_cart"
            android:name="@string/menu_cart" />
        <item
            android:id="@+id/nav_status"
            android:icon="@drawable/ic_menu_status"
            android:name="@string/menu_status" />
        <item android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_menu_favorite"
            android:name="@string/menu_favorites" />
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_menu_exit"
            android:name="@string/menu_exit" />
    </group>

    <item android:name="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:name="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:name="@string/menu_send" />
        </menu>
    </item>

</menu>
