<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white"
    app:bbn_itemColorActive="@color/colorPrimary"
    app:bbn_itemColorDisabled="#33ffffff"
    app:bbn_itemColorInactive="#99000000"
    app:bbn_rippleColor="@color/colorPrimary">
    <item
        android:id="@+id/nav_home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_home" />
    <item
        android:id="@+id/nav_status"
        android:enabled="true"
        android:icon="@drawable/ic_receipt"
        android:title="@string/menu_receipt" />
    <item
        android:id="@+id/nav_cart"
        android:enabled="true"
        android:icon="@drawable/ic_menu_cart"
        android:title="@string/menu_cart" />

    <item android:id="@+id/nav_favorites"
        android:enabled="true"
        android:icon="@drawable/ic_favorite"
        android:title="@string/menu_favorites" />
</menu>