<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:paddingHorizontal="@dimen/dimen_16dp"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        tools:text="@string/app_name"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_edit"
        android:textSize="13sp"
        android:textStyle="bold"
        android:textColor="@color/colorOrange"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_userPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/txt_suggestion"
        app:layout_constraintTop_toBottomOf="@id/tv_userName"
        app:layout_constraintLeft_toLeftOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimens_20dp"
        android:orientation="vertical"
        android:layout_marginHorizontal="@dimen/dimens_10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_userPhone">
        <TextView
            android:id="@+id/tv_my_orders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_bottom_line_gray"
            android:text="@string/txt_my_order"
            android:drawableLeft="@drawable/ic_list"
            android:drawableTint="@color/grey_40"
            android:paddingVertical="@dimen/dimens_20dp"
            android:drawablePadding="@dimen/dimens_10dp"
            android:gravity="center_vertical"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_manage_addresses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_bottom_line_gray"
            android:text="@string/txt_manage_addresses"
            android:drawableLeft="@drawable/ic_manage_addresses"
            android:drawableTint="@color/grey_40"
            android:paddingVertical="@dimen/dimens_20dp"
            android:drawablePadding="@dimen/dimens_10dp"
            android:gravity="center_vertical"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_payments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_bottom_line_gray"
            android:text="@string/txt_payments"
            android:drawableLeft="@drawable/ic_payment"
            android:drawableTint="@color/grey_40"
            android:paddingVertical="@dimen/dimens_20dp"
            android:drawablePadding="@dimen/dimens_10dp"
            android:gravity="center_vertical"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_bottom_line_gray"
            android:text="@string/txt_help"
            android:drawableLeft="@drawable/ic_help"
            android:drawableTint="@color/grey_40"
            android:paddingVertical="@dimen/dimens_20dp"
            android:drawablePadding="@dimen/dimens_10dp"
            android:gravity="center_vertical"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_bottom_line_gray"
            android:text="@string/txt_logout"
            android:drawableLeft="@drawable/ic_logout"
            android:drawableTint="@color/grey_40"
            android:paddingVertical="@dimen/dimens_20dp"
            android:drawablePadding="@dimen/dimens_10dp"
            android:gravity="center_vertical"
            android:textStyle="bold"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>