<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="@dimen/dimens_45dp">

    <RadioGroup
        android:id="@+id/rg_tab"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimens_45dp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:padding="@dimen/dp_3"
        android:background="@color/colorWhite"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:button="@null"
            android:checked="true"
            android:drawableTop="@drawable/ic_home"
            android:gravity="center_horizontal|bottom"
            android:text="@string/menu_home"
            android:textColor="@color/colorDarkGray" />

        <RadioButton
            android:id="@+id/rb_receipt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/ic_receipt"
            android:gravity="center_horizontal|bottom"
            android:text="@string/menu_receipt"
            android:textColor="@color/colorDarkGray" />

        <RadioButton
            android:id="@+id/rb_favorite"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/ic_favorite"
            android:gravity="center_horizontal|bottom"
            android:text="@string/menu_favorites"
            android:textColor="@color/colorDarkGray" />

        <RadioButton
            android:id="@+id/rb_person"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/ic_person"
            android:gravity="center_horizontal|bottom"
            android:text="@string/menu_my"
            android:textColor="@color/colorDarkGray" />
    </RadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0_5"
        android:background="@color/line_color"
        android:layout_below="@id/rg_tab"/>
</RelativeLayout>