<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.trangdv.orderfood.ui.BaseStatusBar
        android:id="@+id/base_status_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_header"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar_header"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center|start"
        android:orientation="horizontal"
        android:background="@drawable/bg_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/base_status_bar"
        >

        <ImageView android:id="@+id/iv_back"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="@drawable/button_effect_oval"
            android:tint="@color/colorWhite"
            android:layout_marginLeft="5dp"
            android:src="@drawable/ic_back"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView android:id="@+id/tvTitle"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_place_order"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_header"
        app:layout_constraintLeft_toLeftOf="parent"
        android:drawableLeft="@drawable/ic_money"
        android:drawableTint="@color/grey_40"
        android:layout_marginTop="@dimen/dimens_10dp"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:drawablePadding="@dimen/dp_5"
        android:textSize="16sp"
        android:gravity="center_vertical"
        android:background="@drawable/bg_bottom_line_gray"
        tools:text="123"/>

    <TextView
        android:id="@+id/tv_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_price"
        app:layout_constraintLeft_toLeftOf="parent"
        android:drawableLeft="@drawable/ic_phone"
        android:drawableTint="@color/grey_40"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:drawablePadding="@dimen/dp_5"
        android:gravity="center_vertical"
        android:background="@drawable/bg_bottom_line_gray"
        android:textSize="16sp"
        android:layout_marginTop="@dimen/dimens_10dp"
        tools:text="abc" />

    <TextView
        android:id="@+id/tv_lable_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/tv_date"
        app:layout_constraintLeft_toLeftOf="parent"
        android:drawableLeft="@drawable/ic_date"
        android:drawableTint="@color/grey_40"
        android:layout_marginLeft="@dimen/dimen_16dp"
        android:drawablePadding="@dimen/dp_5"
        android:layout_marginTop="@dimen/dimens_10dp"
        android:textSize="16sp"
        tools:text="@string/txt_date"/>

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:background="@drawable/bg_bottom_line_gray"
        app:layout_constraintTop_toBottomOf="@id/tv_phone"
        app:layout_constraintLeft_toRightOf="@id/tv_lable_date"
        android:layout_marginRight="@dimen/dimen_16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="@dimen/dimens_30dp"
        android:layout_marginTop="@dimen/dimens_10dp"
        android:hint="@string/txt_seleted_date"/>

    <TextView
        android:id="@+id/tv_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_lable_date"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="@dimen/dimens_30dp"
        android:textSize="16sp"
        android:layout_marginLeft="@dimen/dimen_16dp"
        android:drawableLeft="@drawable/ic_add_location"
        android:drawableTint="@color/grey_40"
        android:drawablePadding="@dimen/dp_5"
        android:textStyle="bold"
        android:text="@string/txt_address"/>


    <RadioGroup
        android:id="@+id/rdi_group_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_address"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/dimens_10dp"
        android:layout_marginLeft="30dp" >

        <RadioButton
            android:id="@+id/rdi_user_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="Vị trí hiện tại của bạn" />

        <RadioButton
            android:id="@+id/rdi_user_addrres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Địa chỉ của bạn" />
    </RadioGroup>

    <TextView
        android:id="@+id/tv_add_new_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_add_new_address"
        android:background="@drawable/bg_button_change_address"
        android:paddingHorizontal="@dimen/padd_10"
        android:paddingVertical="@dimen/dp_5"
        android:layout_marginTop="@dimen/dimens_10dp"
        android:textColor="@color/colorWhite"
        android:layout_marginRight="@dimen/dimen_16dp"
        app:layout_constraintTop_toBottomOf="@id/rdi_group_address"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/tv_payments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_add_new_address"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/txt_payments"
        android:drawableLeft="@drawable/ic_payment"
        android:drawablePadding="@dimen/dp_5"
        android:drawableTint="@color/grey_40"
        android:layout_marginLeft="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimens_30dp"
        android:textStyle="bold"
        android:textSize="16sp" />


    <RadioGroup
        android:id="@+id/rdi_group_payments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_payments"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/dimens_10dp"
        android:layout_marginLeft="30dp" >
        <RadioButton
            android:id="@+id/rdi_cod"
            android:checked="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_cash_on_deliver" />
        <RadioButton
            android:id="@+id/rdi_online_payment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/txt_online_payment" />
    </RadioGroup>

    <TextView
        android:id="@+id/tv_proceed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/bg_button_cart"
        android:gravity="center"
        android:paddingVertical="12dp"
        android:text="@string/txt_proceed"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>