<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog"
        android:layout_marginHorizontal="@dimen/dimens_10dp">
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_dialog_gps"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="@dimen/dimens_10dp"
            />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="Tên"
            android:textSize="13sp"
            android:layout_marginLeft="@dimen/dimen_16dp"
            android:layout_marginRight="@dimen/dimen_16dp"
            android:layout_marginTop="@dimen/dimen_16dp"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="Địa chỉ"
            android:textSize="13sp"
            android:layout_marginLeft="@dimen/dimen_16dp"
            android:layout_marginRight="@dimen/dimen_16dp"
            android:layout_marginTop="@dimen/dimen_16dp"
            app:layout_constraintTop_toBottomOf="@id/edt_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

        <View
            android:id="@+id/v_vertical"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/gray"
            android:layout_marginTop="@dimen/dimens_30dp"
            app:layout_constraintTop_toBottomOf="@id/edt_address"/>

        <View
            android:id="@+id/v_horizontal"
            android:layout_width="2dp"
            android:layout_height="0dp"
            android:background="@color/gray"
            app:layout_constraintTop_toBottomOf="@id/v_vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/tv_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_update"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            android:padding="@dimen/padd_10"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/v_horizontal"
            app:layout_constraintTop_toTopOf="@id/v_vertical"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:id="@+id/tv_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_cancel"
            android:textSize="14sp"
            android:padding="@dimen/dimens_10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/v_horizontal"
            app:layout_constraintTop_toTopOf="@id/v_vertical"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>




</RelativeLayout>